--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">VideoPlayer</string>
+    <string name="Home">Home</string>
+    <string name="Away">Away</string>
+    <string name="Close">Close</string>
+    <string name="retry">retry</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
